[tool.poetry]
name = "django-flippy"
version = "0.1.0"
description = "A [Flipper Cloud](https://www.flippercloud.io/) package for Django apps."
authors = ["Matt Cooper <vtbassmatt@gmail.com>"]
readme = "README.md"
packages = [{include = "flippy"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "flippercloud: live HTTP tests which require FLIPPER_CLOUD_TOKEN to be set",
]
# by default, don't run flippercloud tests
addopts = "-m 'not flippercloud'"
